# waylochorus2

./: CMakeLists.txt  readme.md
waylochorus2/waylochorus2/: waylochorus2.jucer
waylochorus2/waylochorus2/Builds/LinuxMakefile/: Makefile
waylochorus2/waylochorus2/Builds/MacOSX/: Info-VST3.plist  Info-VST3_Manifest_Helper.plist
waylochorus2/waylochorus2/Builds/MacOSX/waylochorus2.xcodeproj/: project.pbxproj
waylochorus2/waylochorus2/Builds/MacOSX/waylochorus2.xcodeproj/project.xcworkspace/xcuserdata/seanwayland.xcuserdatad/: UserInterfaceState.xcuserstate
waylochorus2/waylochorus2/Builds/MacOSX/waylochorus2.xcodeproj/xcuserdata/seanwayland.xcuserdatad/xcschemes/: xcschememanagement.plist
waylochorus2/waylochorus2/JuceLibraryCode/: JucePluginDefines.h
waylochorus2/waylochorus2/Source/: PluginProcessor.cpp
